examples/k8stest/conf/HTTPRoute/Backend/LBRoundRobin/Service_default_lb-rr-multi.yaml
# LB RoundRobin 多 Slice 测试服务
apiVersion: v1
kind: Service
metadata:
  name: lb-rr-multi-service
  namespace: edgion-default
spec:
  selector:
    app: edgion-test-server-multi
  ports:
    - port: 8080
      protocol: TCP
