examples/k8stest/conf/HTTPRoute/Backend/LBRoundRobin/Service_default_lb-rr.yaml
# LB RoundRobin 测试服务（单 slice / EP 场景共用）
apiVersion: v1
kind: Service
metadata:
  name: lb-rr-service
  namespace: edgion-default
spec:
  selector:
    app: edgion-test-server
  ports:
    - port: 8080
      protocol: TCP
