examples/k8stest/conf/HTTPRoute/Backend/LBRoundRobin/HTTPRoute_default_lb-rr-eps.yaml
# RoundRobin + EndpointSlice （）
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lb-rr-eps
  namespace: edgion-default
  annotations:
    edgion.io/max-retries: "0"
spec:
  parentRefs:
    - name: lb-rr-gateway
      namespace: edgion-test
  hostnames:
    - "lb-rr-eps.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test
      timeouts:
        request: 2s
        backendRequest: 1s
      backendRefs:
        - name: lb-rr-service
          port: 8080
